# ml_hack_0

./: .gitignore  README.md  ReadMe.md  pyproject.toml
src/ml_hack_0/: elements.py  webcam_pipeline.json
